<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical" android:padding="16dp">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/label_name"/>
        <EditText
            android:id="@+id/etNoteName"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/hint_name"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/label_content" android:paddingTop="12dp"/>
        <EditText
            android:id="@+id/etNoteContent"
            android:layout_width="match_parent" android:layout_height="150dp"
            android:gravity="top"
            android:hint="@string/hint_content"
            android:inputType="textMultiLine"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/btn_save" android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
